--- a/components/ProjectOverview/projectOverview.module.css
+++ b/components/ProjectOverview/projectOverview.module.css
@@ -51,7 +51,7 @@
 .content_title_desc {
   font-family: Bebas Neue;
   display: inline-block;
-  padding-left: 0.25em;
+  /* padding-left: 0.25em; */
   font-size: 2.75em;
   color: #222;
   font-weight: 500;
@@ -124,6 +124,15 @@
   font-weight: 500;
   font-size: 5em;
   line-height: 0.9em;
+}
+.offerSection_price_2 {
+  color: #f69c75;
+  font-family: Bebas Neue;
+  font-weight: 500;
+  font-size: 3em;
+  line-height: 0.8em;
+  margin-top: 0.5rem;
+  text-decoration: line-through;
 }
 
 .offerSection_content {
