--- a/components/WalkThroughVideo/page.module.css
+++ b/components/WalkThroughVideo/page.module.css
@@ -6,7 +6,16 @@
   flex-direction: column;
   min-height: 80vh;
 }
-
+.LeaguewalkThroughVideo_content {
+  padding: 2em 0.5em;
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.LeagueOneWalkThrough {
+  padding: 2em 0.5em;
+}
 .WalkThroughVideo_title {
   text-transform: uppercase;
   font-weight: 500;
@@ -21,6 +30,42 @@
   font-family: Formular;
   margin-top: 0.25em;
   font-size: 13.5px;
+}
+
+.tabs {
+  display: inline-flex;
+  align-items: center;
+  /* height: 30px; */
+  border-radius: 6px;
+  background: #d7ee9c;
+  position: relative;
+}
+.activeTab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 190px;
+  height: 32px;
+  cursor: pointer;
+  border-radius: 6px;
+  background: #434343;
+  font-size: 13px;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.inActiveTab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 30px;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  text-align: center;
+  color: #9eb85d;
 }
 
 .WalkThroughVideo_ques {
@@ -42,6 +87,11 @@
   padding: 2em 1em 2em 2em;
   width: 70%;
 }
+.LeagueOneWalkThroughVideo_media {
+  padding: 2em 0 2em 0em;
+  width: 100%;
+  aspect-ratio: 2/1;
+}
 
 .walkThroughVideo_media iframe {
   height: 100%;
@@ -60,7 +110,6 @@
 }
 
 @media screen and (max-width: 768px) {
-
   .walkThroughVideo_content,
   .walkThroughVideo_media {
     width: 100%;
