--- a/app/page.module.css
+++ b/app/page.module.css
@@ -121,6 +121,7 @@
 
 .explorePrptyBtn {
     background: #128082;
+    color: #fff !important;
     padding: 5px 1rem;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
