--- a/app/page.module.css
+++ b/app/page.module.css
@@ -381,3 +381,41 @@
         aspect-ratio: 1/1;
     }
 }
+
+.page_homeEnquiryFormSection__dbTSQ {
+    position: absolute;
+    /* bottom: -1.6rem; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 700px;
+    background-color: transparent;
+    height: 200px;
+    z-index: 99999;
+    border-radius: 0px 16px 0 0;
+}
+@media only screen and (min-width: 480px){
+    .page_homeEnquiryFormSection__dbTSQ { 
+           width: 300px;
+    }
+
+}
+
+.page_homeEnquiryFormSection {
+    position: absolute;
+    /* bottom: -1.6rem; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 700px;
+    background-color: transparent;
+    height: 200px;
+    z-index: 99999;
+    border-radius: 0px 16px 0 0;
+}
+@media only screen and (min-width: 480px){
+    .page_homeEnquiryFormSection { 
+           width: 300px;
+    }
+
+}
