page.module.css

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -401,7 +401,7 @@
 
 }
 
-.page_homeEnquiryFormSection {
+.db-form {
     position: absolute;
     /* bottom: -1.6rem; */
     top: 50%;
@@ -414,7 +414,7 @@
     border-radius: 0px 16px 0 0;
 }
 @media only screen and (min-width: 480px){
-    .page_homeEnquiryFormSection { 
+    .db-form { 
            width: 300px;
     }
 
