--- a/app/globals.css
+++ b/app/globals.css
@@ -1548,7 +1548,21 @@ input[type="number"] {
 }
 
 .db-form{
-  margin-top: 40%;
+  margin-top: 60%;
   z-index: 1000;
+  position: absolute;
+    /* bottom: -1.6rem; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    background-color: transparent;
+    height: 200px;
+    z-index: 99999;
+    border-radius: 0px 16px 0 0;
 
 }
+@media only screen and (min-width: 480px){
+  .db-form {
+    width: 300px;
+  }}
