--- a/app/globals.css
+++ b/app/globals.css
@@ -1548,21 +1548,22 @@ input[type="number"] {
 }
 
 .db-form{
-  margin-top: 80%;
   z-index: 1000;
   position: absolute;
+  margin-top: 30%;
     /* bottom: -1.6rem; */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300px;
+    width: 700px;
     background-color: transparent;
     height: 200px;
     z-index: 99999;
     border-radius: 0px 16px 0 0;
 
 }
-@media only screen and (min-width: 480px){
+@media only screen and (max-width: 480px){
   .db-form {
     width: 300px;
+    margin-top: 80%;
   }}
